--- a/style.css
+++ b/style.css
@@ -130,8 +130,6 @@ h2 {
 }
 
 .episode {
-	border: 1px solid rgb(200, 200, 200);
-	padding: 10px 2%;
 	margin-top: 10px;
 	box-shadow: 1px 2px 5px 0px rgba(0, 0, 0, 0.2);
 }
@@ -139,7 +137,7 @@ h2 {
 /******** Specific styles *******/
 
 .hero-image {
-	background-image: url('./banner.jpg');
+	background-image: url('Banner.jpg');
 	height: 600px;
 	background-position: right;
 	position: relative;
@@ -178,10 +176,15 @@ h2 {
 	color: #320a5c;
 }
 
+.max-width-container {
+	max-width: 1200px;
+	margin: auto;
+}
+
 /****** Responsive! ******/
 @media (max-width: 600px) {
 	.hero-image {
-		background-image: url('./logo.jpg');
+		background-image: url('logo.jpg');
 		height: auto;
 		width: 100%;
 		padding-top: 100%;
@@ -191,5 +194,14 @@ h2 {
 		top: 30px;
 		bottom: auto;
 		font-size: 18px;
+	}
+}
+
+@media (min-width: 1200px) {
+	.max-width-container {
+		box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.2);
+	}
+	body {
+		background-color: #d4d3d4;
 	}
 }
